Bug 1721945 - Move Linux mochitest-browser-chrome tests to Software WebRender. r=jmaher
autoland

--- target_task_set27882dfe84fb
+++ target_task_setao_ci_linux_browser_chrome_swr
+test-linux1804-64-asan-qr/opt-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-asan-qr/opt-mochitest-browser-chrome-swr-fis-e10s
-test-linux1804-64-asan/opt-mochitest-browser-chrome-e10s
-test-linux1804-64-asan/opt-mochitest-browser-chrome-fis-e10s
+test-linux1804-64-qr/debug-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-qr/debug-mochitest-browser-chrome-swr-fis-e10s
+test-linux1804-64-qr/opt-mochitest-browser-chrome-swr-a11y-checks-e10s
+test-linux1804-64-qr/opt-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-qr/opt-mochitest-browser-chrome-swr-fis-e10s
+test-linux1804-64-qr/opt-mochitest-devtools-chrome-a11y-checks-e10s
-test-linux1804-64/debug-mochitest-browser-chrome-e10s
-test-linux1804-64/debug-mochitest-browser-chrome-fis-e10s
-test-linux1804-64/opt-mochitest-browser-chrome-a11y-checks-e10s
-test-linux1804-64/opt-mochitest-browser-chrome-e10s
-test-linux1804-64/opt-mochitest-browser-chrome-fis-e10s

mozilla-central

--- target_task_set27882dfe84fb
+++ target_task_setao_ci_linux_browser_chrome_swr
+test-linux1804-64-asan-qr/opt-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-asan-qr/opt-mochitest-browser-chrome-swr-fis-e10s
-test-linux1804-64-asan/opt-mochitest-browser-chrome-e10s
-test-linux1804-64-asan/opt-mochitest-browser-chrome-fis-e10s
+test-linux1804-64-ccov-qr/opt-mochitest-browser-chrome-swr-e10s
-test-linux1804-64-ccov/opt-mochitest-browser-chrome-e10s
+test-linux1804-64-qr/debug-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-qr/debug-mochitest-browser-chrome-swr-fis-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-browser-chrome-swr-a11y-checks-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-browser-chrome-swr-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-browser-chrome-swr-fis-e10s
+test-linux1804-64-shippable-qr/opt-mochitest-devtool

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -688,6 +688,26 @@ M
 -
 swr
 -
+a11y
+-
+checks
+'
+:
+'
+Mochitests
+with
+software
+webrender
+and
+accessibility
+checks
+enabled
+'
+'
+M
+-
+swr
+-
 1proc
 '
 :
@@ -699,6 +719,41 @@ webrender
 enabled
 without
 e10s
+'
+'
+M
+-
+swr
+-
+fis
+'
+:
+'
+Mochitests
+with
+software
+webrender
+and
+fission
+enabled
+'
+'
+M
+-
+swr
+-
+wayland
+'
+:
+'
+Mochitests
+with
+software
+webrender
+and
+Wayland
+backend
+enabled
 '
 '
 M
