--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -1051,20 +1051,72 @@ linux
 shippable
 )
 ?
+-
+qr
 /
 opt
 :
 [
 '
+webrender
+-
+sw
+'
+'
+webrender
+-
+sw
+-
 fission
 '
 '
+webrender
+-
+sw
+-
 a11y
 -
 checks
 '
 '
+webrender
+-
+sw
+-
 wayland
+'
+]
+linux
+.
+*
+64
+(
+-
+asan
+|
+-
+ccov
+|
+-
+devedition
+)
+-
+qr
+/
+opt
+:
+[
+'
+webrender
+-
+sw
+'
+'
+webrender
+-
+sw
+-
+fission
 '
 ]
 linux
@@ -1083,9 +1135,17 @@ webrender
 sw
 '
 '
+webrender
+-
+sw
+-
 fission
 '
 '
+webrender
+-
+sw
+-
 wayland
 '
 ]
@@ -1132,29 +1192,23 @@ test
 -
 platform
 :
-linux
-.
-*
-64
+(
+windows10
 -
-asan
-/
-opt
-:
-[
-'
-trunk
-'
-]
-linux
+64
+|
+macosx
 .
 *
 64
+)
 (
 -
 shippable
 )
 ?
+-
+qr
 /
 (
 opt
@@ -1167,17 +1221,89 @@ debug
 trunk
 '
 ]
-(
-windows10
+default
+:
+[
+]
+webrender
 -
-64
-|
-macosx
+sw
+:
+by
+-
+test
+-
+platform
+:
+linux
 .
 *
 64
-)
 (
+-
+asan
+)
+?
+-
+qr
+/
+(
+opt
+|
+debug
+)
+:
+[
+'
+all
+'
+]
+linux
+.
+*
+64
+(
+-
+shippable
+|
+-
+ccov
+)
+-
+qr
+/
+opt
+:
+[
+'
+release
+'
+]
+default
+:
+built
+-
+projects
+webrender
+-
+sw
+-
+fission
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+64
+(
+-
+asan
+|
 -
 shippable
 )
@@ -1220,6 +1346,17 @@ opt
 trunk
 '
 ]
+linux
+.
+*
+-
+qr
+/
+.
+*
+:
+[
+]
 default
 :
 built
@@ -1248,6 +1385,68 @@ linux
 .
 *
 64
+-
+qr
+/
+debug
+:
+1
+default
+:
+2
+webrender
+-
+sw
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+64
+(
+-
+asan
+|
+-
+shippable
+)
+?
+-
+qr
+/
+(
+opt
+|
+debug
+)
+:
+1
+default
+:
+default
+webrender
+-
+sw
+-
+fission
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+64
+-
+qr
 /
 debug
 :
@@ -1282,6 +1481,8 @@ platform
 linux
 .
 *
+-
+qr
 /
 debug
 :
@@ -1292,11 +1493,8 @@ linux
 64
 -
 asan
-(
 -
 qr
-)
-?
 /
 opt
 :
@@ -1414,6 +1612,15 @@ tsan
 opt
 :
 9000
+linux
+.
+*
+-
+qr
+/
+opt
+:
+5400
 .
 *
 /
