--- a/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
+++ b/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
@@ -273,6 +273,35 @@ ebay
 .
 com
 /
+playback_version
+=
+6
+.
+0
+.
+2
+playback_pageset_manifest
+=
+mitm6
+-
+darwin
+-
+firefox
+-
+ebay
+.
+manifest
+playback_recordings
+=
+mitm6
+-
+darwin
+-
+firefox
+-
+ebay
+.
+mp
 [
 espn
 ]
